增加修改用户信息的接口
