# api/v1/schemas.py
@@ -54,6 +54,7 @@ definitions = {'definitions': {'advertisementsModel': {'type': 'array', 'items':
 
 validators = {
     ('accounts', 'POST'): {'json': {'example': {'username': 'buglib', 'email': 'buglib@foxmail.com', 'password': '5hV62VD9mMbvRKthI563w8tTJs4VHFy', 'telephone': '12345665431'}, 'type': 'object', 'required': ['username', 'email', 'password', 'telephone'], 'properties': {'username': {'type': 'string'}, 'email': {'type': 'string'}, 'password': {'type': 'string'}, 'telephone': {'type': 'string'}}}},
+    ('accounts', 'PUT'): {'json': {'type': 'object', 'required': ['id', 'username'], 'example': {'id': 1, 'username': 'icyfenix', 'name': '周志明', 'avatar': 'https://www.gravatar.com/avatar/1563e833e42fb64b41eed34c9b66d723?d=mp', 'telephone': '18888888888', 'email': 'icyfenix@gmail.com', 'location': '唐家湾港湾大道科技一路3号远光软件股份有限公司'}, 'properties': {'id': {'type': 'integer'}, 'username': {'type': 'string'}, 'email': {'type': 'string'}, 'password': {'type': 'string'}, 'telephone': {'type': 'string'}, 'avatar': {'type': 'string'}, 'name': {'type': 'string'}, 'location': {'type': 'string'}}}},
     ('oauth_token', 'GET'): {'args': {'required': ['grant_type', 'client_id', 'client_secret'], 'properties': {'username': {'type': 'string', 'required': False}, 'password': {'type': 'string', 'required': False}, 'refresh_token': {'type': 'string', 'required': False, 'description': '如果该字段为空，则用户名和密码不能同时为空'}, 'grant_type': {'type': 'string'}, 'client_id': {'type': 'string'}, 'client_secret': {'type': 'string'}}}},
 }
 
@@ -63,6 +64,7 @@ filters = {
     ('products', 'GET'): {200: {'headers': None, 'schema': {'type': 'array', 'items': {'$ref': '#/definitions/productModel'}}}},
     ('product', 'GET'): {200: {'headers': None, 'schema': {'$ref': '#/definitions/productModel'}}, 404: {'headers': None, 'schema': None}},
     ('accounts', 'POST'): {200: {'headers': None, 'schema': {'type': 'object', 'example': {'code': 0, 'message': '操作已成功'}, 'properties': {'code': {'type': 'integer'}, 'message': {'type': 'string'}}}}, 400: {'headers': None, 'schema': {'type': 'object', 'example': {'code': 0, 'message': '操作失败，用户已存在'}, 'properties': {'code': {'type': 'integer'}, 'message': {'type': 'string'}}}}},
+    ('accounts', 'PUT'): {200: {'headers': None, 'schema': {'type': 'object', 'example': {'status': 'done', 'message': "Succeed to update user 'Messi'"}, 'properties': {'status': {'type': 'string'}, 'message': {'type': 'string'}}}}},
     ('accounts_username', 'GET'): {200: {'headers': None, 'schema': {'example': {'id': 1, 'username': 'icyfenix', 'name': '周志明', 'avatar': '', 'telephone': '18888888888', 'email': 'icyfenix@gmail.com', 'location': '唐家湾港湾大道科技一路3号远光软件股份有限公司'}, 'properties': {'id': {'type': 'integer'}, 'username': {'type': 'string'}, 'name': {'type': 'string'}, 'avatar': {'type': 'string'}, 'telephone': {'type': 'string'}, 'email': {'type': 'string'}, 'location': {'type': 'string'}}}}, 404: {'headers': None, 'schema': {'example': {'code': -1, 'message': '按用户名查找用户失败，即用户不存在'}, 'type': 'object', 'properties': {'code': {'type': 'integer'}, 'message': {'type': 'string'}}}}},
     ('oauth_token', 'GET'): {200: {'headers': None, 'schema': {'$ref': '#/definitions/tokenModel'}}, 404: {'headers': None, 'schema': {'type': 'object', 'properties': {'status': {'type': 'string', 'description': '操作状态', 'example': 'Fail to get access token'}, 'message': {'type': 'string', 'description': '操作状态详述', 'example': "User 'Messi' not found"}}}}, 400: {'headers': None, 'schema': {'type': 'object', 'properties': {'status': {'type': 'string', 'description': '操作状态', 'example': 'Fail to get access token'}, 'message': {'type': 'string', 'description': '操作状态详述', 'example': ["Invalid password for user 'Messi'", 'Grant type must be password', "Invalid client id for user 'Messi'", "Invalid client secret for user 'Messi'"]}}}}},
 }
